NULL =

png_icons = \
	appointment-missed.png \
	appointment-soon.png \
	audio-volume-high.png \
	audio-volume-low.png \
	audio-volume-medium.png \
	audio-volume-muted.png \
	audio-volume-off.png \
	avatar-default.png \
	battery-caution-charging.png \
	battery-caution.png \
	battery-empty.png \
	battery-full-charged.png \
	battery-full-charging.png \
	battery-full.png \
	battery-good-charging.png \
	battery-good.png \
	battery-low-charging.png \
	battery-low.png \
	battery-missing.png \
	changes-allow.png \
	changes-prevent.png \
	computer-fail.png \
	dialog-error.png \
	dialog-information.png \
	dialog-password.png \
	dialog-question.png \
	dialog-warning.png \
	dropboxstatus-busy2.png \
	dropboxstatus-busy.png \
	dropboxstatus-idle.png \
	dropboxstatus-logo.png \
	dropboxstatus-x.png \
	image-loading.png \
	image-missing.png \
	mail-attachment.png \
	mail-read.png \
	mail-replied.png \
	mail-unread.png \
	media-playlist-repeat.png \
	media-playlist-shuffle.png \
	microphone-sensitivity-high.png \
	microphone-sensitivity-low.png \
	microphone-sensitivity-medium.png \
	microphone-sensitivity-muted.png \
	network-error.png \
	network-idle.png \
	network-offline.png \
	network-receive.png \
	network-transmit.png \
	network-transmit-receive.png \
	non-starred.png \
	printer-error.png \
	printer-printing.png \
	security-high.png \
	security-low.png \
	security-medium.png \
	semi-starred.png \
	semi-starred-rtl.png \
	software-update-available.png \
	software-update-urgent.png \
	starred.png \
	task-due.png \
	task-past-due.png \
	trophy-bronze.png \
	trophy-gold.png \
	trophy-silver.png \
	user-available.png \
	user-away.png \
	user-busy.png \
	user-idle.png \
	user-invisible.png \
	user-offline.png \
	user-trash-full.png \
	weather-clear-night.png \
	weather-clear.png \
	weather-few-clouds-night.png \
	weather-few-clouds.png \
	weather-fog.png \
	weather-overcast.png \
	weather-severe-alert.png \
	weather-showers.png \
	weather-showers-scattered.png \
	weather-snow.png \
	weather-storm.png \
	$(NULL)

appointment-missed.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:95:326:119 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

appointment-soon.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:395:726:419 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-high.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:400:327:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-low.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:100:327:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-medium.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:400:727:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-muted.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:100:727:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-off.png: ../../../src/audio-volume-off.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:100:327:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

avatar-default.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-caution-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=322:400:346:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-caution.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:700:1126:724 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-empty.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:-220:726:-196 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full-charged.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:-530:726:-506 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:400:726:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-good-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:100:1126:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-good.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:400:1126:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-low-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:-220:1126:-196 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-low.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:700:726:724 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-missing.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:-221:326:-197 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

changes-allow.png: ../../../src/changes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

changes-prevent.png: ../../../src/changes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

computer-fail.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1902:101:1926:125 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-error.png: ../../../src/dialog-error.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-information.png: ../../../src/dialog-information.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-password.png: ../../../src/dialog-password.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-question.png: ../../../src/dialog-question.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-warning.png: ../../../src/dialog-warning.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-drag-accept.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-open.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-visiting.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

image-loading.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=700:96:724:120 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

image-missing.png: ../../../src/photos.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-attachment.png: ../../../src/mail-attachment.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-read.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-replied.png: ../../../src/mail-replied.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-unread.png: ../../../src/mail-unread.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playlist-repeat.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=42:30:66:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playlist-shuffle.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=12:30:36:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-muted.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=450:111:474:135 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-low.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=530:111:554:135 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-medium.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=610:111:634:135 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-high.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=690:111:714:135 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-error.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:400:1126:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-idle.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-offline.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1502:400:1526:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-receive.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1502:100:1526:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-transmit.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:100:1126:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-transmit-receive.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-error.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:93:726:117 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-printing.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:393:726:417 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-high.png: ../../../src/security-high.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-low.png: ../../../src/security-low.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-medium.png: ../../../src/security-medium.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

software-update-available.png: ../../../src/software-update.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

software-update-urgent.png: ../../../src/software-update.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

non-starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=300:100:324:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

semi-starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=722:400:746:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

semi-starred-rtl.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=722:100:746:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:400:326:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

task-due.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

task-past-due.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-bronze.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:98:1126:122 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-gold.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:98:326:122 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-silver.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:98:726:122 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-available.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1212:100:1236:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-offline.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1272:100:1296:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-idle.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1332:100:1356:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-away.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1392:100:1416:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-invisible.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1452:100:1476:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-busy.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1512:100:1536:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-trash-full.png: ../../../src/trash.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-clear-night.png: ../../../src/weather-clear-night.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-clear.png: ../../../src/weather-clear.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-few-clouds-night.png: ../../../src/weather-few-clouds-night.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-few-clouds.png: ../../../src/weather-few-clouds.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-fog.png: ../../../src/weather-fog.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-overcast.png: ../../../src/weather-overcast.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-severe-alert.png: ../../../src/weather-severe-alert.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-showers.png: ../../../src/weather-showers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-showers-scattered.png: ../../../src/weather-showers-scattered.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-snow.png: ../../../src/weather-snow.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-storm.png: ../../../src/weather-storm.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
