NULL =

png_icons = \
	address-book-new.png \
	appointment-new.png \
	document-new.png \
	document-open-recent.png \
	document-page-setup.png \
	document-print.png \
	document-print-preview.png \
	document-properties.png \
	document-revert.png \
	document-revert-rtl.png \
	document-save-as.png \
	document-save.png \
	edit-delete.png \
	edit-find.png \
	edit-find-replace.png \
	edit-select-all.png \
	go-first.png \
	go-jump.png \
	go-last.png \
	go-next.png \
	go-previous.png \
	mail-message-new.png \
	mail-send.png \
	process-stop.png \
	system-lock-screen.png \
	system-log-out.png \
	system-run.png \
	system-search.png \
	system-shutdown.png \
	view-refresh.png \
	$(NULL)

address-book-new.png: ../../../src/x-office-address-book.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=421:21:677:277 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

appointment-new.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:310:272:566 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-new.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=417:308:673:564 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-open.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1220:628:1476:884 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-open-recent.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=416:10:672:266 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-page-setup.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=25:8:281:264 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-print.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:3:276:259 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-print-preview.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=820:303:1076:559 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-properties.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=813:317:1069:573 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-revert.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1635:308:1891:564 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-revert-rtl.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1220:8:1476:264 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-save-as.png: ../../../src/cabinets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=815:15:1071:271 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-save.png: ../../../src/cabinets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=415:15:671:271 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-delete.png: ../../../src/edit-delete.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:18:271:274 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-find.png: ../../../src/find.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=19:19:275:275 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-find-replace.png: ../../../src/find.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=417:19:673:275 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-select-all.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1220:308:1476:564 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-new.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:628:276:884 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-first.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:-269:276:-13 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-jump.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:-552:271:-296 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-last.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=851:-269:1107:-13 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-next.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=570:-269:826:-13 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-previous.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=283:-269:559:-13 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-message-new.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:13:276:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-send.png: ../../../src/mail-send.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=10:10:266:266 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

process-stop.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=576:-552:832:-296 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-lock-screen.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:11:678:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-log-out.png: ../../../src/system-log-out.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-run.png: ../../../src/system-run.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=6:11:261:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-search.png: ../../../src/system-search.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=19:19:275:275 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-shutdown.png: ../../../src/system-shutdown.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=25:13:281:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-refresh.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=296:-552:552:-296 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
