NULL =

png_icons = \
	accessories-calculator.png \
	accessories-character-map.png \
	accessories-dictionary.png \
	accessories-text-editor.png \
	applets-screenshooter.png \
	multimedia-volume-control.png \
	preferences-desktop-accessibility.png \
	preferences-desktop-display.png \
	preferences-desktop-font.png \
	preferences-desktop-keyboard.png \
	preferences-desktop-keyboard-shortcuts.png \
	preferences-desktop-locale.png \
	preferences-desktop-remote-desktop.png \
	preferences-desktop-screensaver.png \
	preferences-desktop-wallpaper.png \
	preferences-desktop-theme.png \
	preferences-system-notifications.png \
	preferences-system-privacy.png \
	preferences-system-search.png \
	preferences-system-sharing.png \
	system-file-manager.png \
	system-software-install.png \
	system-software-update.png \
	system-users.png \
	user-info.png \
	utilities-system-monitor.png \
	utilities-terminal.png \
	web-browser.png \
	$(NULL)

accessories-calculator.png: ../../../src/accessories-calculator.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=24:11:280:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

accessories-character-map.png: ../../../src/accessories-character-map.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

accessories-dictionary.png: ../../../src/accessories-dictionary.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=24:0:280:256 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

accessories-text-editor.png: ../../../src/accessories-text-editor.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

applets-screenshooter.png:  ../../../src/applets-screenshooter.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

multimedia-volume-control.png: ../../../src/multimedia-volume-control.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:11:267:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-accessibility.png: ../../../src/preferences-desktop-accessibility.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:11:276:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-display.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-font.png: ../../../src/preferences-desktop-font.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-keyboard.png: ../../../src/keyboards.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=416:11:672:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-keyboard-shortcuts.png: ../../../src/preferences-desktop-keyboard-shortcuts.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:13:272:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-locale.png: ../../../src/preferences-desktop-locale.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:11:267:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-remote-desktop.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=822:11:1078:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-screensaver.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:311:678:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-theme.png: ../../../src/preferences-desktop-theme.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:16:278:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-desktop-wallpaper.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=822:311:1078:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-system-notifications.png: ../../../src/preferences-system-notifications.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:16:267:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-system-privacy.png: ../../../src/preferences-system-privacy.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:16:278:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-system-search.png: ../../../src/preferences-system-search.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:16:278:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

preferences-system-sharing.png: ../../../src/preferences-system-sharing.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:6:278:262 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-file-manager.png: ../../../src/cabinets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:22:272:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-software-install.png: ../../../src/system-software.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:0:278:256 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-software-update.png: ../../../src/system-software.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:0:678:256 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-users.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=822:22:1078:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-info.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:22:678:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

utilities-system-monitor.png: ../../../src/terminals.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:0:678:256 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

utilities-terminal.png: ../../../src/terminals.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:0:278:256 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

web-browser.png: ../../../src/web-browser.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=13:16:269:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
