NULL =

png_icons = \
	ac-adapter.png \
	audio-headphones.png \
	audio-headset.png \
	audio-input-microphone.png \
	audio-speakers.png \
	battery.png \
	camera-photo.png \
	camera-video.png \
	camera-web.png \
	computer.png \
	drive-harddisk.png \
	drive-multidisk.png \
	drive-optical.png \
	drive-removable-media.png \
	input-dialpad.png \
	input-gaming.png \
	input-keyboard.png \
	input-mouse.png \
	input-tablet.png \
	media-flash.png \
	media-floppy.png \
	media-optical.png \
	media-removable.png \
	multimedia-player.png \
	phone.png \
	printer.png \
	printer-network.png \
	scanner.png \
	uninterruptible-power-supply.png \
	video-display.png \
	$(NULL)

ac-adapter.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-headphones.png: ../../../src/audio-headphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:311:278:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-headset.png: ../../../src/audio-headphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-input-microphone.png: ../../../src/audio-input-microphone.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-speakers.png: ../../../src/audio-speakers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:16:272:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:611:278:867 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-photo.png: ../../../src/camera-photo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:11:272:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-video.png: ../../../src/camera-video.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:11:272:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-web.png: ../../../src/camera-web.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

computer.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:322:272:578 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-harddisk.png: ../../../src/drive-harddisk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=19:11:275:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-multidisk.png: ../../../src/drive-multidisk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:11:276:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-optical.png: ../../../src/drives.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:11:272:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-removable-media.png: ../../../src/drives.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=416:16:672:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-dialpad.png: ../../../src/input-dialpad.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:11:267:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-gaming.png: ../../../src/input-gaming.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:16:278:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-keyboard.png: ../../../src/keyboards.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-mouse.png: ../../../src/input-mouse.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:11:267:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-tablet.png: ../../../src/input-tablet.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-flash.png: ../../../src/media-flash.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:16:278:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@
media-floppy.png: ../../../src/media-floppy.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:11:272:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-optical.png: ../../../src/media-optical.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:7:271:263 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-removable.png: ../../../src/media-removable.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:22:267:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

multimedia-player.png: ../../../src/multimedia-player.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

phone.png: ../../../src/phone.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:11:267:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:303:276:559 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-network.png: ../../../src/printer-network.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

scanner.png: ../../../src/scanner.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:16:272:272 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

uninterruptible-power-supply.png: ../../../src/uninterruptible-power-supply.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

video-display.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:311:278:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
